--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -7,18 +7,84 @@
   {% include "theme-meta" %}
   {% include "theme-fonts" %}
   {% include "theme-styles" %}
+
+  <meta name="google-site-verification" content="Kk9_ZKYxDy9F2sadeABLP-MG2rGc8WrvSbvu4xDMQrg" />
+  
+  <!-- Google Tag Manager USer ID Push-->   
+  {% if customer  %}
+    <script>
+      var dataLayer  = window.dataLayer || []; // this is optional row.
+      dataLayer.push({
+      'gtm_user_id': '{{customer.id}}',
+          'CustomerEmail': '{{ customer.email }}'
+      });   
+    </script>    
+ {% endif %}
+  
+  <style>.async-hide { opacity: 0 !important} </style>
+  <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+  h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+  (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+  })(window,document.documentElement,'async-hide','dataLayer',4000,
+  {'GTM-TQR9X2N':true});</script>
+    
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TQR9X2N');</script>
+  <!-- End Google Tag Manager -->
+
   {% include 'theme-customer' %}
   {% include 'theme-shop' %}
   {% include 'theme-api' %}
   {% include 'theme-vendors' %}
+     
   {{ content_for_header }}
   <style>
     #preview-bar-iframe { 
       display: none !important 
     }
   </style>
+
+  {{ 'paymentfont.scss.css' | asset_url | stylesheet_tag }}
+      
+  {% render 'shogun-head' %}
+  {% include "loyaltylion" %}
+
+  {%- assign yotpo_offload_content = shop.metafields.yotpo.yotpo_offload_content %}
+  {%- assign time_now = 'now' | date: '%s' %}
+  {%- assign yotpo_live_time = shop.metafields.yotpo.yotpo_live | date: '%s' %}
+  {%- assign diffSeconds = time_now | minus: yotpo_live_time %}
+  {%- if yotpo_offload_content == 'yes' and diffSeconds < 86400 -%}
+  {{ 'yotpo-full-css.css' | asset_url | stylesheet_tag }}
+  {%- endif -%}
+
+  <script>
+    window['friendbuy'] = window['friendbuy'] || [];
+    window['friendbuy'].push(['site', 'site-2f2484cf-atlasbars.com']);
+    window['friendbuy'].push(['track', 'customer',
+        {
+            id: '{{ customer.id }}',
+            email: '{{ customer.email }}',
+            first_name: '{{ customer.first_name }}',
+            last_name: '{{ customer.last_name }}'
+        }
+    ]);
+    (function (f, r, n, d, b, y) {
+        b = f.createElement(r), y = f.getElementsByTagName(r)[0];b.async = 1;b.src = n;y.parentNode.insertBefore(b, y);
+    })(document, 'script', '//djnf6e5yyirys.cloudfront.net/js/friendbuy.min.js');
+  </script>
+
 </head>
 <body class="o-body" data-body>
+  
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQR9X2N"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   {% include 'theme-header' %}
   <main class="o-main" data-main>
     {% include 'component-welcome' %}
@@ -30,8 +96,7 @@
   {% include 'widget-trial' %}
   {% include 'widget-cart' %}
   {% include 'theme-scripts' %}
-  <!--Gorgias Chat Widget Start-->
-    <div id="gorgias-chat">{% if customer %}<script>window.gorgiasChatParameters = {"smooch": {"givenName": "{{ customer.name }}","email": "{{ customer.email }}","properties": {"shopify__cart__total_price": "{{ cart.total_price | money | strip_html | default: null }}","shopify__cart__nb_of_items": {{ cart.items | size | default: 0 }},{% for item in cart.items %}"shopify__cart__items-{{ forloop.index }}-[]":"{\"line_price\":\"{{item.line_price|money|strip_html|default:null}}\",\"price\":\"{{item.price|money|strip_html|default:null}}\",\"product_id\":\"{{item.product_id|default:null}}\",\"quantity\":{{item.quantity|default:null}},\"sku\":\"{{item.sku|default:null}}\",\"title\":\"{{item.title}}\",\"variant_id\":{{item.variant_id|default:null}},\"vendor\":\"{{item.vendor|default:null}}\",\"id\":{{item.id|default:null}}}"{% if forloop.last != true %},{% endif %}{% endfor %}}}}</script>{% else %}<script>window.gorgiasChatParameters = {"smooch": {"properties": {"shopify__cart__total_price": "{{ cart.total_price | money | strip_html | default: null }}","shopify__cart__nb_of_items": {{ cart.items | size | default: 0 }},{% for item in cart.items %}"shopify__cart__items-{{ forloop.index }}-[]":"{\"line_price\":\"{{item.line_price|money|strip_html|default:null}}\",\"price\":\"{{item.price|money|strip_html|default:null}}\",\"product_id\":\"{{item.product_id|default:null}}\",\"quantity\":{{item.quantity|default:null}},\"sku\":\"{{item.sku|default:null}}\",\"title\":\"{{item.title}}\",\"variant_id\":{{item.variant_id|default:null}},\"vendor\":\"{{item.vendor|default:null}}\",\"id\":{{item.id|default:null}}}"{% if forloop.last != true %},{% endif %}{% endfor %}}}}</script>{% endif %}<script src="https://config.gorgias.io/production/r1WE86rJbA6J4Mvg/chat/984vj29YVQE2PKGO.js" defer></script></div>
-  <!--Gorgias Chat Widget End-->
+  {% render 'banana-stand-footer' %}
+
 </body>
 </html>
